Dark mode improvements. Bugs UI improvements.

--- a/source/src/main/webapp/css/global/crb_style2.css
+++ b/source/src/main/webapp/css/global/crb_style2.css
@@ -967,7 +967,10 @@ a {
     cursor: pointer;
     margin-right: 5px;
 }
-
+.modal-content{
+    box-shadow: 0 0px 15px var(--crb-black-color);
+    background-color : var(--crb-black-color);
+}
 .modal-header, .modal-body, .modal-footer{
     color: var(--crb-black-color);
     background-color: var(--crb-white-color);
